fixed breakpoint in media query to work on iphone Pro displays

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@media only screen and (min-width: 426px) {
+@media only screen and (min-width: 522px) {
   .five-day-forecast .card {
     width: 15rem;
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 521px) {
   .five-day-forecast .card {
     width: 100%;
     height: 25rem;
